RESOLVED FIXED299813
Fix Swift build config
https://bugs.webkit.org/show_bug.cgi?id=299813
Summary Fix Swift build config
Mike Wyrzykowski
Reported 2025-09-29 11:13:54 PDT
Fix Swift build config
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-29 11:14:12 PDT
Mike Wyrzykowski
Comment 2 2025-09-29 11:17:48 PDT
EWS
Comment 3 2025-09-29 21:56:49 PDT
Committed 300732@main (be662f6bab71): <https://commits.webkit.org/300732@main> Reviewed commits have been landed. Closing PR #51514 and removing active labels.
Mike Wyrzykowski
Comment 4 2025-09-29 23:12:23 PDT
Reopened Bugzilla. 300732@main wasn't ready to merge, tracking revert in https://bugs.webkit.org/show_bug.cgi?id=299859.
Mike Wyrzykowski
Comment 5 2025-09-30 16:29:03 PDT
EWS
Comment 6 2025-10-03 16:17:14 PDT
Committed 300977@main (6e5ada01bc7e): <https://commits.webkit.org/300977@main> Reviewed commits have been landed. Closing PR #51600 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.