Fix Swift build config https://bugs.webkit.org/show_bug.cgi?id=299813 rdar://161584294

Unreviewed build fix

* Source/WebGPU/Configurations/WebGPU.xcconfig:

Canonical link: https://commits.webkit.org/300732@main