Source/WebGPU/WebGPU/WebGPU.h
@@ -43,6 +43,7 @@
 
 #include <array>
 #include <optional>
+#include <span>
 #include <wtf/Forward.h>
 #include <wtf/StdLibExtras.h>
 
